--- a/лендинг №2/index.html
+++ b/лендинг №2/index.html
@@ -3,14 +3,24 @@
     <head>
        <link rel="stylesheet" href="reset.css">
        <link rel="stylesheet" href="style.css">
+       <link href="https://fonts.googleapis.com/css?family=Pacifico|Roboto+Slab&display=swap" rel="stylesheet">
        <title>Мой лендинг #2</title>
        <meta charset="utf-8">
+       <style>
+        body {
+          font-family: 'Pacifico', cursive;
+          
+        }
+        h1, h2, h3 {
+           font-family: 'Roboto Slab', serif;
+        }
+      </style>
     </head>
    <body>
        <header>
-           <img src="img/icons8-покемон-64.png" alt="символ">
+           <img src="img/icons8-покемон-64.png" alt="символ" class="pokemon">
            <nav>
-               <ul>
+               <ul class="navigation">
                    <li><a href="features.html">features</a></li>
                    <li><a href="screenshots.html">screenshots</a></li>
                    <li><a href="how it works.">how it works</a></li>
@@ -19,42 +29,76 @@
                </ul>
            </nav>
            <div>
-               <img src="img/samolet-1.jpg" alt="img1">
-               <div>
+               <img src="img/samolet-1.jpg" alt="img1" class="aircraft-img">
+               <div class="aircraft">
                    <h1>Самолёт</h1>
                    <p>Самолёт построим сами,<br>
                         Понесёмся над лесами <br>
                         Понесёмся над лесами,<br>
-                        А потом вернёмся к маме.</p>
+                        А потом вернёмся к маме.
+                    </p>
+                    <a href="documents/doc.docx"><button>Загрузка файла</button></a>
                </div>
-               <a href="documents/doc.docx"><button>Загрузка файла</button></a>
            </div>
        </header>
-       <section>
-           <h2>Зайка</h2>
-           <p>Зайку бросила хозяйка -<br>
-            Под дождем остался зайка.<br>
-            Со скамейки слезть не мог,<br>
-            Весь до ниточки промок.</p>
+       <section class="rabbit">
+                <h2>Зайка</h2>
+                <p>Зайку бросила хозяйка -<br>
+                 Под дождем остался зайка.<br>
+                 Со скамейки слезть не мог,<br>
+                 Весь до ниточки промок.</p>           
             <div>
-                <ul>
-                    <li><img src="img/icons8-виски-64.png" alt="зайка">
-                    <h3>Одинокий</h3>
-                    <p>Зайку бросила хозяйка -</p>
+                <ul class="line">
+                    <li>
+                        <img src="img/icons8-виски-64.png" alt="зайка">
+                        <h3>Одинокий</h3>
+                        <p>Зайку бросила хозяйка -</p>                   
                     </li>
-                    <li><img src="img/icons8-дождь-64.png" alt="тучка">
+                    <li>
+                        <img src="img/icons8-дождь-64.png" alt="тучка">
                         <h3>Дождь</h3>
                         <p>Под дождем остался зайка.</p>
                     </li>
-                    <li><img src="img/icons8-кресло-64.png" alt="ещё что-то">
+                    <li>
+                        <img src="img/icons8-кресло-64.png" alt="ещё что-то">
                         <h3>Скамейка</h3>
                         <p>Со скамейки слезть не мог,</p>
                     </li>
-                    <li><img src="img/icons8-душ-64.png" alt="ещё что-то">
+                    <li>
+                        <img src="img/icons8-душ-64.png" alt="ещё что-то">
                         <h3>Мокро</h3>
                         <p>Весь до ниточки промок.</p>
                     </li>
                 </ul>
             </div>
        </section>
+       <section>
+           <div class="one">
+               <img src="img/car-and-cat.jpg" alt="car-and-cat">
+           </div>
+           <div class="two">
+               <h2>Грузовик</h2>
+               <p>стишок про издевательства над котом</p>
+                <ul>
+                    <li>Нет, напрасно мы решили</li>
+                    <li>Прокатить кота в машине:</li>
+                    <li>Кот кататься не привык -</li>
+                    <li>Опрокинул грузовик.</li>
+                </ul>
+           </div>
+           <div class="three">
+               <p>Скачать стишки можно тут: 
+                   <img src="img/apple.png" alt="apple">
+                   <img src="img/google.png" alt="google">
+                </p>
+           </div>
+           <div class="four">
+               <img src="img/cow.jpg" alt="cow">
+           </div>
+       </section>
+       <footer>
+           <p>Кеда Марина 2019</p>
+           <a href="contacts.html">contacts</a>
+       </footer>
    </body>
+ </html>  
