--- a/week4/index.html
+++ b/week4/index.html
@@ -19,7 +19,7 @@
    <body>
        <header>
            <img src="img/icons8-покемон-64.png" alt="символ" class="pokemon">
-           <nav>
+           <nav >
                <ul class="navigation">
                    <li><a href="features.html">features</a></li>
                    <li><a href="screenshots.html">screenshots</a></li>
@@ -28,7 +28,7 @@
                    <li><a href="contacts.html">contacts</a></li>
                </ul>
            </nav>
-           <div>
+           <div class="air">
                <img src="img/samolet-1.jpg" alt="img1" class="aircraft-img">
                <div class="aircraft">
                    <h1>Самолёт</h1>
@@ -37,7 +37,7 @@
                         Понесёмся над лесами,<br>
                         А потом вернёмся к маме.
                     </p>
-                    <a href="documents/doc.docx"><button>Загрузка файла</button></a>
+                    <a href="documents/doc.docx" class="donloade">Загрузка файла</a>
                </div>
            </div>
        </header>
@@ -47,7 +47,6 @@
                  Под дождем остался зайка.<br>
                  Со скамейки слезть не мог,<br>
                  Весь до ниточки промок.</p>           
-            <div>
                 <ul class="line">
                     <li>
                         <img src="img/icons8-виски-64.png" alt="зайка">
@@ -69,10 +68,9 @@
                         <h3>Мокро</h3>
                         <p>Весь до ниточки промок.</p>
                     </li>
-                </ul>
-            </div>
+                </ul>           
        </section>
-       <section>
+       <section class="car">
            <div class="one">
                <img src="img/car-and-cat.jpg" alt="car-and-cat">
            </div>
