--- a/week4/index.html
+++ b/week4/index.html
@@ -85,9 +85,9 @@
                 </ul>
            </div>
            <div class="three">
-               <p>Скачать стишки можно тут: 
-                   <img src="img/apple.png" alt="apple">
-                   <img src="img/google.png" alt="google">
+               <p class="picture">Скачать стишки можно тут: 
+                   <img src="img/apple.png" alt="apple" class="apple">
+                   <img src="img/google.png" alt="google" class="google">
                 </p>
            </div>
            <div class="four">
