--- a/week4/index.html
+++ b/week4/index.html
@@ -18,18 +18,20 @@
     </head>
    <body>
        <header>
-           <img src="img/icons8-покемон-64.png" alt="символ" class="pokemon">
-           <nav >
-               <ul class="navigation">
-                   <li><a href="features.html">features</a></li>
-                   <li><a href="screenshots.html">screenshots</a></li>
-                   <li><a href="how it works.">how it works</a></li>
-                   <li><a href="testimonials.html">testimonials</a></li>
-                   <li><a href="contacts.html">contacts</a></li>
-               </ul>
-           </nav>
-           <div class="air">
-               <img src="img/samolet-1.jpg" alt="img1" class="aircraft-img">
+           <div class="pokemon">
+                <img src="img/icons8-покемон-64.png" alt="символ">
+                <nav >
+                    <ul class="navigation">
+                        <li><a href="features.html">features</a></li>
+                        <li><a href="screenshots.html">screenshots</a></li>
+                        <li><a href="how it works.">how it works</a></li>
+                        <li><a href="testimonials.html">testimonials</a></li>
+                        <li><a href="contacts.html">contacts</a></li>
+                    </ul>
+                </nav>                    
+           </div>
+           
+           <div class="air">               
                <div class="aircraft">
                    <h1>Самолёт</h1>
                    <p>Самолёт построим сами,<br>
@@ -39,6 +41,7 @@
                     </p>
                     <a href="documents/doc.docx" class="donloade">Загрузка файла</a>
                </div>
+               <img src="img/samolet-1.jpg" alt="img1" class="aircraft-img">
            </div>
        </header>
        <section class="rabbit">
