--- a/week5/index5.html
+++ b/week5/index5.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>Week 5</title>
+    <head>        
         <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="style.css">
+        <meta charset="utf-8">
+        <title>Week 5</title>
+        <link href="https://fonts.googleapis.com/css?family=Sniglet&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
-            <a href="github.com"><img src="img/logo.png" alt="Пикачу"></a>
-            <h1>С третьего раза долно же получится</h1>
-            <button>Кнопка!!</button>
+            <a href="https://github.com/"><img src="img/logo.png" alt="Пикачу"></a>
+            <h1>С третьего раза долно же получится!!!</h1>
+            <a href="https://github.com/" class="button">Кнопка!!</a>
         </header>
         <section class="nav">
             <div class="logo">
@@ -28,7 +29,7 @@
         <section class="info">
             <h2>Про нас</h2>
             <p>Мы самые-самые. Работайте с нами и у Вас все получится.</p>
-            <ol>
+            <ol class="we">
                 <li>
                     <h3>Мы делаем </h3>
                     <p>Мы делаем хорошо и много. Всё делаем. Саи с усами.</p>
@@ -74,8 +75,15 @@
         </section>
         <section class="us">
             <h3>Свяжись с нами</h3>
-            <p>ну пожалуйста, напиши нам ))</p>
+             <p>ну пожалуйста, напиши нам ))</p>
             <div class="form">
+                <form action="https://docs.google.com/spreadsheets/d/1AYVhcNV5WsE-mJyvyQjsMgGwSWMTtmq9pJt9qN9H9sM/edit#gid=0">
+                    <input type="text" name="name" value="Name">
+                    <input type="text" name="mail" value="Mail">
+                    <input type="text" name="subject" value="subject" cols="60">
+                    <textarea name="message" id="message" cols="60" rows="10">Message</textarea>
+                    <input type="submit" value="send">                
+                </form>
 
             </div>
         </section>
