--- a/week5/index5.html
+++ b/week5/index5.html
@@ -11,7 +11,7 @@
         <header>
             <a href="https://github.com/"><img src="img/logo.png" alt="Пикачу"></a>
             <h1>С третьего раза долно же получится!!!</h1>
-            <a href="https://github.com/" class="button">Кнопка!!</a>
+            <a href="https://github.com/" class="button">Ссылка</a>
         </header>
         <section class="nav">
             <div class="logo">
@@ -51,26 +51,26 @@
         <section class="portfolio">
             <h3>Картиночки</h3>
             <div class="portfolio-img">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
+                <img src="img/rabbit1.jpg" alt="">
+                <img src="img/rabbit2.jpg" alt="">
+                <img src="img/rabbit3.jpg" alt="">
+                <img src="img/rabbit4.jpg" alt="">
+                <img src="img/fox1.jpg" alt="">
+                <img src="img/fox2.jpg" alt="">
+                <img src="img/fox3.jpg" alt="">
+                <img src="img/fox4.jpg" alt="">
             </div>            
         </section>
         <section class="client">
             <h3>Клиенты</h3>
             <p>Вот некоторые наши товарищи</p>
             <div class="client-img">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
+                <img src="img/logo/logo15.png" alt="">
+                <img src="img/logo/logo18.png" alt="">
+                <img src="img/logo/logo3.png" alt="">
+                <img src="img/logo/logo5.png" alt="">
+                <img src="img/logo/logo8.png" alt="">
+                <img src="img/logo/logo9.png" alt="">
             </div>            
         </section>
         <section class="us">
@@ -78,11 +78,11 @@
              <p>ну пожалуйста, напиши нам ))</p>
             <div class="form">
                 <form action="https://docs.google.com/spreadsheets/d/1AYVhcNV5WsE-mJyvyQjsMgGwSWMTtmq9pJt9qN9H9sM/edit#gid=0">
-                    <input type="text" name="name" value="Name">
-                    <input type="text" name="mail" value="Mail">
-                    <input type="text" name="subject" value="subject" cols="60">
-                    <textarea name="message" id="message" cols="60" rows="10">Message</textarea>
-                    <input type="submit" value="send">                
+                    <input type="text" name="name" value="Name" class="short">
+                    <input type="text" name="mail" value="Mail" class="short">
+                    <input type="text" name="subject" value="subject" >
+                    <textarea name="message" id="message" class="message">Message</textarea>
+                    <input type="submit" value="send" class="send">                
                 </form>
 
             </div>
@@ -90,10 +90,10 @@
         <footer>
             <p> и снова это Моя работа- Кеда Марина</p>
             <div class="link">
-                <a href="www.facebook.com"><img src="" alt="facebook"></a>
-                <a href="twitter.com"><img src="" alt="twitter"></a>
-                <a href="www.instagram.com"><img src="" alt="instagram"></a>
-                <a href="www.youtube.com"><img src="" alt="youtube"></a>
+                <a href="https://www.facebook.com"><img src="img/logo/facebook.png" alt="facebook"></a>
+                <a href="https://www.twitter.com"><img src="img/logo/twitter.png" alt="twitter"></a>
+                <a href="https://www.instagram.com"><img src="img/logo/instagram.png" alt="instagram"></a>
+                <a href="https://www.youtube.com/"><img src="img/logo/youtube.png" alt="youtube"></a>
             </div>
         </footer>
     </body>
